--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -19,12 +19,19 @@
     }
 }
 
+.notification-dialog{
+    min-width: 878px;
+}
+
+.notification-table{
+    width: 100%;
+}
+
 .notification-icon{
-    padding: 1rem;
 }
 
 .notification-timestamp{
-    padding: 1rem;
+    margin: 0 0.5rem;
     display: flex;
     flex-direction: column;
     white-space: nowrap;
@@ -39,19 +46,17 @@
 }
 
 .notification-content{
-    display: flex;
-    align-items: center;
-    min-width: 878px;
+    margin: 0 0.5rem;
+}
 
-    &__message{
-        padding: 1rem;
-    }
-
-    &__link{
-        padding: 1rem;
-    }
+.notification-link{
+    padding: 1rem;
 }
 
 mat-dialog-actions{
     justify-content: center;
+
+    button{
+        margin: 0 1rem;
+    }
 }
