--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -6,21 +6,18 @@
     </div>
 </div>
 <ng-template #dialogTemplate>
-    <div class="notification-dialog">
         <h2 mat-dialog-title>Notifications</h2>
         <mat-dialog-content #dialogContent>
-            <table mat-table [dataSource]="userNotifications" class="notification-table">
+            <p *ngIf="userNotifications.length === 0">No notifications yet.</p>
+            <table *ngIf="userNotifications.length > 0" mat-table [dataSource]="userNotifications">
                 <ng-container matColumnDef="icon">
                     <th mat-header-cell *matHeaderCellDef>New</th>
                     <td mat-cell *matCellDef="let element">
-                        <div class="notification-icon">
-                            <button mat-icon-button *ngIf="!element.read" (click)="markAsRead(element)">
-                                <mat-icon>message</mat-icon>
-                            </button>
-                        </div>
+                        <button mat-icon-button *ngIf="!element.read" (click)="markAsRead(element)">
+                            <mat-icon>message</mat-icon>
+                        </button>
                     </td>
                 </ng-container>
-
                 <ng-container matColumnDef="timestamp">
                     <th mat-header-cell *matHeaderCellDef>Time</th>
                     <td mat-cell *matCellDef="let element">
@@ -34,7 +31,6 @@
                         </div>
                     </td>
                 </ng-container>
-
                 <ng-container matColumnDef="content">
                     <th mat-header-cell *matHeaderCellDef>Notification</th>
                     <td mat-cell *matCellDef="let element">
@@ -43,27 +39,26 @@
                         </div>
                     </td>
                 </ng-container>
-
                 <ng-container matColumnDef="link">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let element">
                         <div class="notification-link">
-                            <button mat-raised-button color="primary" *ngIf="element.link" [routerLink]="element.link"
-                                    tabindex="-1" matDialogClose>
-                                <mat-icon>navigate_next</mat-icon>
+                            <button mat-icon-button *ngIf="element.link" [routerLink]="element.link"
+                                    tabindex="-1" (click)="markAsRead(element)" matDialogClose>
+                                <mat-icon>arrow_forward</mat-icon>
                             </button>
                         </div>
                     </td>
                 </ng-container>
-
                 <tr mat-header-row *matHeaderRowDef="['icon','timestamp','content','link']; sticky: true"></tr>
                 <tr mat-row *matRowDef="let row; columns: ['icon','timestamp','content','link'];"></tr>
-
             </table>
         </mat-dialog-content>
         <mat-dialog-actions>
-            <button mat-raised-button (click)="clearUnreadMessages()">Mark all as read</button>
+            <button mat-icon-button aria-label="Scroll to bottom" (click)="scrollToLatestMessage()">
+                <mat-icon>arrow_downward</mat-icon>
+            </button>
+            <button mat-raised-button (click)="markAllAsRead()">Mark all as read</button>
             <button mat-raised-button mat-dialog-close color="primary" cdkTrapFocus>Close</button>
         </mat-dialog-actions>
-    </div>
 </ng-template>
