--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -7,8 +7,11 @@
     display: flex;
     justify-content: flex-end;
 
-    rs-notification{
+    &__notification{
         margin-right: 1rem;
+        @include respond(small) {
+            display: none;
+        }
     }
 
     &__checkbox {
@@ -133,6 +136,13 @@
         }
     }
 
+    &__notification-menu{
+        display: none;
+        @include respond(small) {
+            display: inherit;
+        }
+    }
+
     &__checkbox:checked ~ &__background {
         height: 100vh;
     }
@@ -142,7 +152,6 @@
         opacity: 1;
         left: 0;
     }
-
     &__checkbox:checked + &__button {
         background-color: transparent;
     }
