--- a/src/app/surf-event/surf-event/surf-event.component.html
+++ b/src/app/surf-event/surf-event/surf-event.component.html
@@ -46,9 +46,9 @@
         </div>
         <div class="event__divisions__riders">
             <h2>Riders</h2>
-<!--            <div *ngFor="let division of surfEvent.competitions">-->
-<!--                <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>-->
-<!--            </div>-->
+            <!--            <div *ngFor="let division of surfEvent.competitions">-->
+            <!--                <rs-rider-card *ngFor="let rider of division.riders | slice:0:1" [rider]="rider"></rs-rider-card>-->
+            <!--            </div>-->
             <!--            <div *ngFor="let division of surfEvent.competitions" class="event__divisions__riders">-->
             <!--                <rs-carousel [index]="0" [auto]="false">-->
             <!--                    <ng-container *ngFor="let rider of division.riders">-->
@@ -60,8 +60,16 @@
     </div>
 </div>
 
-<div class="event__map" *ngIf="!isLoading">
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2733.1607076880637!2d7.6155563160159705!3d46.761728653948126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDbCsDQ1JzQyLjIiTiA3wrAzNycwMy45IkU!5e0!3m2!1sde!2sch!4v1630915170035!5m2!1sde!2sch"
-        allowfullscreen="" loading="lazy"></iframe>
+<div *ngIf="!isLoading" class="event__map">
+    <google-map
+        width="100%"
+        height="500px"
+        [center]="{lat: surfEvent.locationLat, lng: surfEvent.locationLong}"
+        [zoom]="mapZoom"
+        [options]="mapOptions">
+        <map-marker
+            [position]="{lat: surfEvent.locationLat, lng: surfEvent.locationLong}"
+            [title]="surfEvent.name">
+        </map-marker>
+    </google-map>
 </div>
