--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -121,3 +121,11 @@ input[type=number] {
     padding: 2px;
     align-items: center;
 }
+
+.highlighted {
+    border: 2px solid $color-primary;
+}
+
+.fade-out {
+    opacity: .5;
+}
