--- a/src/app/surf-event/result-view/result-view.component.html
+++ b/src/app/surf-event/result-view/result-view.component.html
@@ -1,6 +1,6 @@
 <div class="relative-container">
     <div class="result-container">
-        <div class="round" *ngFor="let round of competition.rounds; let roundIndex = index">
+        <div class="round" *ngFor="let round of competition.rounds">
             <h2 class="round__title">{{ "round " + round.id | uppercase}}</h2>
 
             <div class="heat" *ngFor="let heat of round.heats; let heatIndex = index">
@@ -11,12 +11,17 @@
                                      [resultType]="getHeatStatus(heat)"
                                      [points]="result.value"
                                      [roundNumber]="round.id"
+                                     (click)="highlightRider(result.riderId)"
+                                     [isHighlighted]="result.riderId === highlightedRider && highlightActive"
+                                     [isFadedOut]="result.riderId !== highlightedRider && highlightActive"
                     ></rs-rider-result>
 
                 </div>
             </div>
         </div>
-        <rs-progress-line *ngIf="loaded"
+        <rs-progress-line
+            [highlightedRider]="highlightedRider"
+            [activeHighlight]="highlightActive"
                           [points]="points"
                           [lines]="lines"
         ></rs-progress-line>
