--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -39,6 +39,7 @@
 .rider {
     width: 250px;
     margin-bottom: .2rem;
+    cursor: pointer;
 
     &:last-of-type {
         margin-bottom: .5rem;
