Added width to content column and inserting newest message on top

--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -40,6 +40,10 @@
     padding: 0 0.5rem;
 }
 
+.mat-column-content{
+    width: 100%;
+}
+
 mat-dialog-actions{
     justify-content: center;
 
@@ -51,3 +55,4 @@ mat-dialog-actions{
         margin: 0 0.5rem;
     }
 }
+
