--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -40,7 +40,7 @@
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="link">
-                    <th mat-header-cell *matHeaderCellDef></th>
+                    <th mat-header-cell *matHeaderCellDef>Link</th>
                     <td mat-cell *matCellDef="let element">
                         <div class="notification-link">
                             <button mat-icon-button *ngIf="element.link" [routerLink]="element.link"
