--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -27,6 +27,8 @@
 
     &__date{
         font-style: italic;
+        font-size: smaller;
+        color: grey;
     }
 }
 
@@ -36,19 +38,16 @@
     text-align: left;
 }
 
-.notification-link{
-    padding: 0 0.5rem;
-}
-
 .mat-column-content{
     width: 100%;
 }
 
 mat-dialog-actions{
-    justify-content: center;
+    justify-content: space-between;
+    margin: 0;
 
     button{
-        margin: 0 1rem;
+        margin: 0.5rem 1rem;
     }
 
     mat-icon{
