--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -18,14 +18,17 @@
     padding: .5rem 1.5rem;
 
     @include respond(small) {
-
+        overflow: hidden;
 
         &:last-of-type {
-            margin-bottom: 5rem;
+            margin-bottom: 3rem;
         }
-
     }
 
+    & rs-carousel {
+        width: 100%;
+        max-width: 100%;
+    }
 
     &__title {
         font-size: 1rem;
