Hide icons on medium and small devices

--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -58,11 +58,11 @@
         </mat-paginator>
         <button mat-raised-button mat-dialog-close (click)="clearAllMessages()">
             <mat-icon>delete</mat-icon>
-            Clear messages
+            <span>Clear messages</span>
         </button>
         <button mat-raised-button mat-dialog-close (click)="markAllAsRead()">
             <mat-icon>message</mat-icon>
-            Mark all as read
+            <span>Mark all as read</span>
         </button>
         <button mat-raised-button mat-dialog-close color="primary" cdkTrapFocus>
             Close
