--- a/src/app/user/login/signup-form/signup-form.component.scss
+++ b/src/app/user/login/signup-form/signup-form.component.scss
@@ -1,3 +1,4 @@
+
 .form {
     width: 100%;
     padding: 2rem;
@@ -17,3 +18,10 @@
     }
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+}
