--- a/src/app/surf-event/surf-event/competition/competition.component.html
+++ b/src/app/surf-event/surf-event/competition/competition.component.html
@@ -3,6 +3,7 @@
         <mat-tab *ngFor="let round of competition.rounds; let roundIndex = index" [label]="getRoundLabel(roundIndex)" [disabled]="round.riders.length === 0">
             <div class="competition-container">
                 <rs-round
+                    [hasNextRound]="hasNextRoundReady(roundIndex)"
                     [round]="round"
                     [maxRidersInHeat]="competition.config.maxRidersInHeat"
                     [isFinalRound]="round.id === competition.rounds.length-1"
