--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -99,7 +99,7 @@
 
         @include respond(small) {
             margin: 0;
-            padding: 1rem;
+            padding: 1rem .5rem;
 
             &:hover {
                 transform: none;
@@ -124,7 +124,7 @@
         }
 
         @include respond(small) {
-            padding: 0 2rem;
+            padding: 0 1.3rem;
 
             & span {
                 display: none;
