--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -2,6 +2,7 @@
 @import "../../../assets/scss/_responsive";
 .result-container {
     display: flex;
+    justify-content: space-around;
 
     @include respond(small) {
         flex-direction: column;
