Refactor SCSS Styles for much cleaner import statements

--- a/src/app/core/header/navigation/navigation.component.scss
+++ b/src/app/core/header/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
-@import "src/assets/scss/variables";
-@import "src/assets/scss/mixins";
-@import "src/assets/scss/responsive";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
 .navigation {
 
