--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
-@import "src/assets/scss/mixins";
-@import "src/assets/scss/responsive";
+@import "mixins";
+@import "responsive";
 
 .content {
     width: 100%;
