--- a/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -1,5 +1,5 @@
-@import "src/assets/scss/variables";
-@import "src/assets/scss/responsive";
+@import "responsive";
+@import "variables";
 
 .container {
     display: flex;
