--- a/src/app/riders/rider-profile/rider-profile.component.scss
+++ b/src/app/riders/rider-profile/rider-profile.component.scss
@@ -1,5 +1,5 @@
-@import "src/assets/scss/responsive";
-@import "src/assets/scss/mixins";
+@import "mixins";
+@import "responsive";
 
 .container{
     display: flex;
