--- a/src/app/surf-event/surf-event/competition/round/heat/heat.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/heat/heat.component.scss
@@ -1,6 +1,6 @@
-@import "../../../../../../assets/scss/_mixins";
-@import "../../../../../../assets/scss/_variables";
-@import "../../../../../../assets/scss/_responsive";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
 .round {
 
