--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../../../assets/scss/_variables";
-@import "../../../../../../assets/scss/_responsive";
+@import "responsive";
+@import "variables";
 
 .rider__card {
     display: flex;
