--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "assets/scss/_mixins";
-@import "assets/scss/_responsive";
-@import "assets/scss/_variables";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
 * {
     margin: 0;
