--- a/src/app/shared/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/shared/time-line/time-line-line/time-line-line.component.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
-@import "src/assets/scss/variables";
-@import "src/assets/scss/responsive";
+@import "responsive";
+@import "variables";
 
 $event-color: #3f51b5;
 $ongoing-color: #bb4444;
