--- a/src/app/shared/time-line/time-line.component.scss
+++ b/src/app/shared/time-line/time-line.component.scss
@@ -1,5 +1,5 @@
-@import "src/assets/scss/responsive";
-@import "src/assets/scss/variables";
+@import "responsive";
+@import "variables";
 
 .container {
     display: grid;
