--- a/src/app/surf-event/surf-event/competition/round/round.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/round.component.scss
@@ -1,6 +1,6 @@
-@import "../../../../../assets/scss/_mixins";
-@import "../../../../../assets/scss/_variables";
-@import "../../../../../assets/scss/_responsive";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
 .container {
     padding: 0.5rem;
