--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -1,6 +1,6 @@
-@import "src/assets/scss/responsive";
-@import "src/assets/scss/mixins";
-@import "src/assets/scss/variables";
+@import "mixins";
+@import "responsive";
+@import "variables";
 
 .event {
     display: flex;
