--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,5 +1,5 @@
-@import "src/assets/scss/mixins";
-@import "src/assets/scss/responsive";
+@import "mixins";
+@import "responsive";
 
 .main {
     padding: 1rem;
