--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,56 +2,52 @@
     <main class="main">
         <h2>River Surf Events</h2>
         <mat-tab-group [selectedIndex]="selectedTabIndex" (selectedTabChange)="onTabChange($event)">
-            <ng-container *ngIf="currentSurfEvents$ | async as currentSurfEvents">
-                <mat-tab *ngIf="currentSurfEvents.length > 0" label="Current Events" class="main__tab-body">
-                    <div class="events">
-                        <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
-                            <ng-container *ngFor="let surfEvent of currentSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
-                            </ng-container>
-                        </rs-carousel>
-                        <ng-container *ngIf="!smallScreen">
-                            <ng-container *ngFor="let surfEvent of currentSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
-                            </ng-container>
+            <mat-tab *ngIf="currentSurfEvents$ | async as currentSurfEvents" label="Current Events"
+                     class="main__tab-body">
+                <div class="events">
+                    <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
+                        <ng-container *ngFor="let surfEvent of currentSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
                         </ng-container>
-                    </div>
-                </mat-tab>
-            </ng-container>
+                    </rs-carousel>
+                    <ng-container *ngIf="!smallScreen">
+                        <ng-container *ngFor="let surfEvent of currentSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
+                        </ng-container>
+                    </ng-container>
+                </div>
+            </mat-tab>
 
-            <ng-container *ngIf="upcomingSurfEvents$ | async as upcomingSurfEvents">
-                <mat-tab *ngIf="upcomingSurfEvents.length > 0" label="Upcoming Events">
-                    <div class="events">
-                        <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
-                            <ng-container *ngFor="let surfEvent of upcomingSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
-                            </ng-container>
-                        </rs-carousel>
-                        <ng-container *ngIf="!smallScreen">
-                            <ng-container *ngFor="let surfEvent of upcomingSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
-                            </ng-container>
-                        </ng-container>
-                    </div>
-                </mat-tab>
-            </ng-container>
 
-            <ng-container *ngIf="pastSurfEvents$ | async as pastSurfEvents">
-                <mat-tab *ngIf="pastSurfEvents.length > 0" label="Past Events">
-                    <div class="events">
-                        <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
-                            <ng-container *ngFor="let surfEvent of pastSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
-                            </ng-container>
-                        </rs-carousel>
-                        <ng-container *ngIf="!smallScreen">
-                            <ng-container *ngFor="let surfEvent of pastSurfEvents">
-                                <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
-                            </ng-container>
+            <mat-tab *ngIf="upcomingSurfEvents$ | async as upcomingSurfEvents" label="Upcoming Events">
+                <div class="events">
+                    <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
+                        <ng-container *ngFor="let surfEvent of upcomingSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
                         </ng-container>
-                    </div>
-                </mat-tab>
-            </ng-container>
+                    </rs-carousel>
+                    <ng-container *ngIf="!smallScreen">
+                        <ng-container *ngFor="let surfEvent of upcomingSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
+                        </ng-container>
+                    </ng-container>
+                </div>
+            </mat-tab>
+
+            <mat-tab *ngIf="pastSurfEvents$ | async as pastSurfEvents" label="Past Events">
+                <div class="events">
+                    <rs-carousel *ngIf="smallScreen" [index]="currentEvent" [auto]="false">
+                        <ng-container *ngFor="let surfEvent of pastSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent" *rs-carousel-item></rs-event-card>
+                        </ng-container>
+                    </rs-carousel>
+                    <ng-container *ngIf="!smallScreen">
+                        <ng-container *ngFor="let surfEvent of pastSurfEvents">
+                            <rs-event-card [surfEvent]="surfEvent"></rs-event-card>
+                        </ng-container>
+                    </ng-container>
+                </div>
+            </mat-tab>
         </mat-tab-group>
     </main>
 
