--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -1,6 +1,15 @@
 @import "responsive";
 @import "variables";
 
+.edit-button {
+    display: flex;
+    justify-content: center;
+
+    & button {
+        margin-top: 1rem;
+        margin-bottom: .5rem;
+    }
+}
 .result-container {
     display: flex;
     justify-content: space-around;
