--- a/src/app/home/event-card/event-card.component.scss
+++ b/src/app/home/event-card/event-card.component.scss
@@ -38,6 +38,11 @@
         background-size: cover;
     }
 
+    &__subinfo {
+        display: flex;
+        justify-content: space-around;
+    }
+
     mat-chip{
         cursor: pointer;
         outline: none;
