--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -14,19 +14,22 @@
             </div>
         </li>
     </ul>
-    <button
-        *ngIf="showControls"
-        [disabled]="currentIndex === 0"
-        (click)="goToPrevious()"
-    >
-        <mat-icon>arrow_back_ios</mat-icon>
-    </button>
-
-    <button
-        *ngIf="showControls"
-        [disabled]="currentIndex >= elements.length -1"
-        (click)="goToNex()"
-    >
-        <mat-icon>arrow_forward_ios</mat-icon>
-    </button>
+    <div class="button__container">
+        <button
+            *ngIf="showControls"
+            [disabled]="currentIndex === 0"
+            (click)="goToPrevious()"
+        >
+            <mat-icon>arrow_back_ios</mat-icon>
+        </button>
+    </div>
+    <div class="button__container">
+        <button
+            *ngIf="showControls"
+            [disabled]="currentIndex >= elements.length -1"
+            (click)="goToNex()"
+        >
+            <mat-icon>arrow_forward_ios</mat-icon>
+        </button>
+    </div>
 </div>
