improving responsiveness of rider filters

--- a/src/app/riders/riders.component.html
+++ b/src/app/riders/riders.component.html
@@ -4,23 +4,17 @@
             <mat-button-toggle value="male" (change)="toggleDivision($event, group)" [checked]="division === 'male'"
                                class="division-selector__item division-selector__item--male">
                 <mat-icon class="division-selector__item__icon">male</mat-icon>
-                <div class="division-selector__item__info">
-                    <h2>{{ maleCount }} Men</h2>
-                </div>
+                <h2 class="division-selector__item__info">{{ maleCount }} Men</h2>
             </mat-button-toggle>
             <mat-button-toggle value="female" (change)="toggleDivision($event, group)" [checked]="division === 'female'"
                                class="division-selector__item division-selector__item--female">
-                <mat-icon class="division-selector__item__icon">female</mat-icon>
-                <div class="division-selector__item__info">
-                    <h2>{{ femaleCount }} female</h2>
-                </div>
+                <mat-icon class="division-selector__item__icon" >female</mat-icon>
+                    <h2 class="division-selector__item__info" >{{ femaleCount }} female</h2>
             </mat-button-toggle>
             <mat-button-toggle value="kid" (change)="toggleDivision($event, group)" [checked]="division === 'kid'"
                                class="division-selector__item division-selector__item--kids">
                 <mat-icon class="division-selector__item__icon">child_care</mat-icon>
-                <div class="division-selector__item__info">
-                    <h2>{{ kidCount }} kids </h2>
-                </div>
+                <h2 class="division-selector__item__info">{{ kidCount }} kids </h2>
             </mat-button-toggle>
         </mat-button-toggle-group>
     </div>
