--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,7 +80,17 @@ snack-bar-container {
     }
 }
 
+.notification-dialog{
+    max-width: 80vw;
+    max-height: 80vh;
+    width: 100%;
+    height: 100%;
 
+    @include respond(small) {
+        max-width: 100vw !important;
+        max-height: 100vh;
+    }
+}
 
 
 
