--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -14,19 +14,21 @@
                 <ng-container matColumnDef="icon">
                     <th mat-header-cell *matHeaderCellDef>New</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button *ngIf="!element.read" (click)="markAsRead(element)">
-                            <mat-icon>message</mat-icon>
-                        </button>
+                        <div class="dialog-container__icon">
+                            <button mat-icon-button *ngIf="!element.read" (click)="markAsRead(element)">
+                                <mat-icon>message</mat-icon>
+                            </button>
+                        </div>
                     </td>
                 </ng-container>
                 <ng-container matColumnDef="timestamp">
                     <th mat-header-cell *matHeaderCellDef>Time</th>
                     <td mat-cell *matCellDef="let element">
-                        <div class="notification-timestamp">
-                            <div class="notification-timestamp__time">
+                        <div class="dialog-container__timestamp">
+                            <div class="dialog-container__timestamp__time">
                                 {{element.timestamp | date:'HH:mm:ss'}}
                             </div>
-                            <div class="notification-timestamp__date">
+                            <div class="dialog-container__timestamp__date">
                                 {{element.timestamp | date:'d MMMM YYYY'}}
                             </div>
                         </div>
@@ -35,7 +37,7 @@
                 <ng-container matColumnDef="content">
                     <th mat-header-cell *matHeaderCellDef>Notification</th>
                     <td mat-cell *matCellDef="let element">
-                        <div class="notification-message">
+                        <div class="dialog-container__message">
                             {{element.content}}
                         </div>
                     </td>
@@ -43,10 +45,12 @@
                 <ng-container matColumnDef="link">
                     <th mat-header-cell *matHeaderCellDef>Link</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-icon-button *ngIf="element.link" [routerLink]="element.link"
-                                tabindex="-1" (click)="markAsRead(element)" matDialogClose>
-                            <mat-icon>arrow_forward</mat-icon>
-                        </button>
+                        <div class="dialog-container__link">
+                            <button mat-icon-button *ngIf="element.link" [routerLink]="element.link"
+                                    tabindex="-1" (click)="markAsRead(element)" matDialogClose>
+                                <mat-icon>arrow_forward</mat-icon>
+                            </button>
+                        </div>
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="['icon','timestamp','content','link']; sticky: true"></tr>
@@ -54,21 +58,23 @@
             </table>
         </mat-dialog-content>
         <div class="dialog-container__spacer"></div>
-        <mat-dialog-actions>
-            <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]"
+        <mat-dialog-actions class="dialog-container__actions">
+            <mat-paginator *ngIf="userNotifications.data.length > 10" [pageSizeOptions]="[10, 20, 50, 100]"
                            showFirstLastButtons>
             </mat-paginator>
-            <button mat-raised-button mat-dialog-close (click)="clearAllMessages()">
-                <mat-icon>delete</mat-icon>
-                <span>Clear messages</span>
-            </button>
-            <button mat-raised-button mat-dialog-close (click)="markAllAsRead()">
-                <mat-icon>message</mat-icon>
-                <span>Mark all as read</span>
-            </button>
-            <button mat-raised-button mat-dialog-close color="primary" cdkTrapFocus>
-                Close
-            </button>
+            <div class="dialog-container__actions-buttons">
+                <button mat-raised-button mat-dialog-close (click)="clearAllMessages()">
+                    <mat-icon>delete</mat-icon>
+                    <span>Clear messages</span>
+                </button>
+                <button mat-raised-button mat-dialog-close (click)="markAllAsRead()">
+                    <mat-icon>message</mat-icon>
+                    <span>Mark all as read</span>
+                </button>
+                <button mat-raised-button mat-dialog-close color="primary" cdkTrapFocus>
+                    Close
+                </button>
+            </div>
         </mat-dialog-actions>
     </div>
 </ng-template>
