--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -16,66 +16,91 @@
     }
 }
 
-.dialog-container{
+.dialog-container {
     display: flex;
     height: 100%;
     flex-direction: column;
 
-    &__spacer{
+    &__icon {
+        @include respond(small) {
+            .mat-icon-button {
+                transform: scale(0.75);
+            }
+        }
+    }
+
+    &__timestamp {
+        margin: 0 0.5rem;
+        display: flex;
+        flex-direction: column;
+        white-space: nowrap;
+
+        @include respond(small) {
+            white-space: inherit;
+        }
+
+        &__time {
+            font-size: larger;
+
+            @include respond(small) {
+                font-size: inherit;
+            }
+
+        }
+
+        &__date {
+            font-style: italic;
+            font-size: smaller;
+            color: grey;
+        }
+    }
+
+    &__message {
+        margin: 0 0.5rem;
+        vertical-align: top;
+        text-align: left;
+    }
+
+    &__link {
+        @include respond(small) {
+            .mat-icon-button {
+                transform: scale(0.75);
+            }
+        }
+    }
+
+    &__spacer {
         flex-grow: 1;
     }
-}
 
-.notification-timestamp {
-    margin: 0 0.5rem;
-    display: flex;
-    flex-direction: column;
-    white-space: nowrap;
-
-    &__time {
-        font-size: larger;
-    }
-
-    &__date {
-        font-style: italic;
-        font-size: smaller;
-        color: grey;
-    }
-}
-
-.notification-message {
-    margin: 0 0.5rem;
-    vertical-align: top;
-    text-align: left;
-}
-
-.mat-column-content {
-    width: 100%;
-}
-
-mat-dialog-actions {
-    justify-content: space-between;
-    margin: 0;
-
-    @include respond(small) {
+    &__actions {
         justify-content: center;
-    }
+        margin: 0;
 
-    button {
-        margin: 0.5rem 1rem;
-    }
+        &-buttons {
+            display: flex;
+            flex-direction: row;
 
-    mat-icon {
-        margin: 0 0.5rem;
-    }
+            button {
+                margin: 0.5rem 1rem;
+            }
 
-    span {
-        @include respond(medium) {
-            display: none;
+            mat-icon {
+                margin: 0 0.5rem;
+            }
+
+            span {
+                @include respond(medium) {
+                    display: none;
+                }
+                @include respond(small) {
+                    display: none;
+                }
+            }
         }
-        @include respond(small) {
-            display: none;
-        }
+    }
+
+    .mat-column-content {
+        width: 100%;
     }
 }
-
