--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -19,6 +19,10 @@
     height: 100%;
     flex-direction: column;
 
+    &__content{
+        flex-shrink: 5;
+    }
+
     &__icon {
         @include respond(small) {
             .mat-icon-button {
