Moved timeline parts into component

--- a/src/app/riders/rider-profile/rider-timeline/time-line/time-line-line/time-line-line.component.scss
+++ b/src/app/riders/rider-profile/rider-timeline/time-line/time-line-line/time-line-line.component.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
-@import "responsive";
-@import "variables";
+@import "src/styles/responsive";
+@import "src/styles/variables";
 
 $event-color: #3f51b5;
 $ongoing-color: #bb4444;
