--- a/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.scss
+++ b/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.scss
@@ -1,5 +1,5 @@
-@import "responsive";
-@import "variables";
+@import "src/styles/responsive";
+@import "src/styles/variables";
 
 .container {
     display: grid;
