Display firstName with first char of lastName instead of nickName in Results for better usability. Display full name in Favorite Rider Snackbar. Change "Edit Heat" to "Edit Competition" button.

--- a/src/app/surf-event/result-view/result-view.component.html
+++ b/src/app/surf-event/result-view/result-view.component.html
@@ -1,6 +1,6 @@
 <div class="edit-button" *ngIf="isAdministrator">
     <button mat-raised-button color="primary" type="button"
-            (click)="editHeat()">Edit Heat
+            (click)="editCompetition()">Edit Competition
     </button>
 </div>
 <div class="relative-container">
