--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -11,7 +11,7 @@
         ></div>
         <mat-card-title class="rider__card__name" *ngIf="control"> {{rider.firstName}} {{rider.lastName}}
         </mat-card-title>
-        <mat-card-title class="rider__card__nickname" *ngIf="!control"> {{rider.nickName}}</mat-card-title>
+        <mat-card-title class="rider__card__nickname" *ngIf="!control"> {{rider.firstName}} {{rider.lastName.charAt(0)}}.</mat-card-title>
     </mat-card-header>
     <mat-card-content class="rider__card__content">
         <div [ngSwitch]="resultType">
