Added model for historical timelines (year-based, sorted in frontend), optimized styling

--- a/src/app/riders/rider-profile/rider-profile.component.html
+++ b/src/app/riders/rider-profile/rider-profile.component.html
@@ -7,6 +7,6 @@
         <rs-rider-overview *ngIf="rider" [rider]="rider"></rs-rider-overview>
     </div>
     <div class="details">
-        <rs-rider-timeline *ngIf="rider" [riderId]="rider.id"></rs-rider-timeline>
+        <rs-rider-time-line *ngIf="rider" [riderId]="rider.id"></rs-rider-time-line>
     </div>
 </div>
